# LoopTool

./: README.md  pyproject.toml  requirements.txt
grpotool/: grpo_qwen.sh  train_baseline.sh
grpotool/dataset/utils/: json2parquet.py
