[project]
name = "looptool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.12.0",
    "aioboto3>=15.5.0",
    "aiobotocore>=2.25.1",
    "aiofiles>=25.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.2",
    "aiohttp-cors>=0.8.1",
    "aioitertools>=0.13.0",
    "aiosignal>=1.4.0",
    "airportsdata>=20250909",
    "aniso8601>=10.0.1",
    "annotated-types>=0.7.0",
    "anthropic>=0.75.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyio>=4.12.0",
    "asciitree>=0.3.3",
    "astor>=0.8.1",
    "asttokens>=3.0.1",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "av>=16.0.1",
    "beautifulsoup4>=4.14.3",
    "blake3>=1.0.8",
    "blinker>=1.9.0",
    "boto3>=1.40.61",
    "botocore>=1.40.61",
    "cachetools>=6.2.3",
    "certifi>=2025.11.12",
    "cffi>=2.0.0",
    "cfgv>=3.5.0",
    "charset-normalizer>=3.4.4",
    "click>=8.2.1",
    "cloudpickle>=3.1.2",
    "codetiming>=1.4.0",
    "colorful>=0.5.8",
    "comm>=0.2.3",
    "compressed-tensors>=0.12.2",
    "coverage>=7.13.0",
    "cryptography>=46.0.3",
    "cuda-bindings>=13.1.1",
    "cuda-pathfinder>=1.3.3",
    "cuda-python>=13.1.1",
    "cupy-cuda12x>=13.6.0",
    "datasets>=2.14.4",
    "debugpy>=1.8.18",
    "decorator>=5.2.1",
    "decord>=0.6.0",
    "deprecated>=1.3.1",
    "depyf>=0.20.0",
    "dill>=0.3.7",
    "diskcache>=5.6.3",
    "distlib>=0.4.0",
    "distro>=1.9.0",
    "dnspython>=2.8.0",
    "docstring-parser>=0.17.0",
    "einops>=0.8.1",
    "email-validator>=2.3.0",
    "et-xmlfile>=2.0.0",
    "exceptiongroup>=1.3.1",
    "executing>=2.2.1",
    "fastapi>=0.124.4",
    "fastapi-cli>=0.0.16",
    "fastapi-cloud-cli>=0.6.0",
    "fasteners>=0.20",
    "fastrlock>=0.8.3",
    "fastuuid>=0.14.0",
    "filelock>=3.20.0",
    "fire>=0.7.1",
    "flask>=3.1.2",
    "flask-restful>=0.3.10",
    "frozendict>=2.4.7",
    "frozenlist>=1.8.0",
    "fsspec>=2025.10.0",
    "gguf>=0.17.1",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "google-api-core>=2.28.1",
    "google-auth>=2.43.0",
    "googleapis-common-protos>=1.72.0",
    "grpcio>=1.76.0",
    "h11>=0.16.0",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.2.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "identify>=2.6.15",
    "idna>=3.11",
    "ijson>=3.4.0.post0",
    "importlib-metadata>=8.7.0",
    "iniconfig>=2.3.0",
    "inspect-ai>=0.3.69",
    "interegular>=0.3.3",
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jiter>=0.12.0",
    "jmespath>=1.0.1",
    "joblib>=1.5.2",
    "jsonlines>=4.0.0",
    "jsonpatch>=1.33",
    "jsonpath-ng>=1.7.0",
    "jsonpointer>=3.0.0",
    "jsonref>=1.1.0",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-client>=8.7.0",
    "jupyter-core>=5.9.1",
    "langid>=1.1.6",
    "lark>=1.3.1",
    "liger-kernel>=0.6.4",
    "linkify-it-py>=2.0.3",
    "litellm>=1.80.5",
    "llguidance>=1.4.0",
    "llvmlite>=0.46.0",
    "lm-format-enforcer>=0.11.3",
    "markdown>=3.10",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "mathruler>=0.1.0",
    "matplotlib-inline>=0.2.1",
    "mbridge>=0.15.1",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "megatron-core>=0.12.3",
    "mistral-common>=1.8.6",
    "ml-dtypes>=0.5.4",
    "mmh3>=5.2.0",
    "modelscope>=1.33.0",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "msgspec>=0.20.0",
    "multidict>=6.7.0",
    "multiprocess>=0.70.15",
    "nanobind>=2.10.2",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "ninja>=1.13.0",
    "nltk>=3.9.2",
    "nodeenv>=1.9.1",
    "numba>=0.63.1",
    "numcodecs>=0.13.1",
    "numpy>=2.2.6",
    "nvidia-cublas-cu12>=12.8.4.1",
    "nvidia-cuda-cupti-cu12>=12.8.90",
    "nvidia-cuda-nvrtc-cu12>=12.8.93",
    "nvidia-cuda-runtime-cu12>=12.8.90",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "nvidia-cufft-cu12>=11.3.3.83",
    "nvidia-curand-cu12>=10.3.9.90",
    "nvidia-cusolver-cu12>=11.7.3.90",
    "nvidia-cusparse-cu12>=12.5.8.93",
    "nvidia-cusparselt-cu12>=0.7.1",
    "nvidia-ml-py>=13.590.44",
    "nvidia-modelopt>=0.40.0",
    "nvidia-nccl-cu12>=2.27.5",
    "nvidia-nvjitlink-cu12>=12.8.93",
    "nvidia-nvshmem-cu12>=3.3.20",
    "nvidia-nvtx-cu12>=12.8.90",
    "omegaconf>=2.3.0",
    "openai>=2.11.0",
    "opencensus>=0.11.4",
    "opencensus-context>=0.1.3",
    "opencv-fixer>=0.2.5",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-exporter-otlp-proto-common>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-exporter-prometheus>=0.60b1",
    "opentelemetry-proto>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-semantic-conventions>=0.60b1",
    "opentelemetry-semantic-conventions-ai>=0.4.13",
    "optree>=0.18.0",
    "orjson>=3.11.5",
    "outlines>=1.2.9",
    "outlines-core>=0.2.11",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "parso>=0.8.5",
    "partial-json-parser>=0.2.1.1.post7",
    "pathlib-abc>=0.5.2",
    "pdfminer-six>=20251107",
    "pdfplumber>=0.11.8",
    "peft>=0.18.0",
    "pexpect>=4.9.0",
    "pillow>=12.0.0",
    "pip>=25.3",
    "platformdirs>=4.5.1",
    "pluggy>=1.6.0",
    "ply>=3.11",
    "pre-commit>=4.5.0",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.4.1",
    "proto-plus>=1.26.1",
    "protobuf>=6.33.2",
    "psutil>=7.1.3",
    "ptyprocess>=0.7.0",
    "pulp>=3.3.0",
    "pure-eval>=0.2.3",
    "py-cpuinfo>=9.0.0",
    "py-spy>=0.4.1",
    "pyarrow>=22.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pybind11>=3.0.1",
    "pycountry>=24.6.1",
    "pycparser>=2.23",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-extra-types>=2.10.6",
    "pyext>=0.7",
    "pygments>=2.19.2",
    "pylatexenc>=2.10",
    "pynvml>=13.0.1",
    "pypdfium2>=5.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-random-order>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "qwen-vl-utils>=0.0.14",
    "ray>=2.52.1",
    "referencing>=0.37.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rich-toolkit>=0.17.0",
    "rignore>=0.7.6",
    "rpds-py>=0.30.0",
    "rsa>=4.9.1",
    "ruff>=0.14.9",
    "s3fs>=2025.10.0",
    "s3transfer>=0.14.0",
    "safetensors>=0.7.0",
    "scipy>=1.15.3",
    "semver>=3.0.4",
    "sentencepiece>=0.2.1",
    "sentry-sdk>=2.47.0",
    "setproctitle>=1.3.7",
    "setuptools>=80.9.0",
    "sglang>=0.5.2",
    "shellingham>=1.5.4",
    "shortuuid>=1.0.13",
    "six>=1.17.0",
    "smart-open>=7.5.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "soundfile>=0.13.1",
    "soupsieve>=2.8",
    "stack-data>=0.6.3",
    "starlette>=0.50.0",
    "sympy>=1.14.0",
    "tenacity>=9.1.2",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tensordict>=0.6.2",
    "tensorstore>=0.1.78",
    "termcolor>=3.2.0",
    "textual>=1.0.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "tomli>=2.3.0",
    "torch>=2.9.1",
    "torch-memory-saver>=0.0.9",
    "torchao>=0.14.1",
    "torchdata>=0.11.0",
    "torchprofile>=0.0.4",
    "tornado>=6.5.3",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformer-engine>=2.10.0",
    "transformers>=4.57.3",
    "triton>=3.5.1",
    "typer>=0.20.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "uc-micro-py>=1.0.3",
    "universal-pathlib>=0.3.7",
    "urllib3>=2.6.2",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
    "verl>=0.4.1",
    "virtualenv>=20.35.4",
    "vllm>=0.1.2",
    "wandb>=0.23.1",
    "watchfiles>=1.1.1",
    "wcwidth>=0.2.14",
    "websockets>=15.0.1",
    "werkzeug>=3.1.4",
    "wheel>=0.45.1",
    "wrapt>=1.17.3",
    "xformers>=0.0.33.post2",
    "xgrammar>=0.1.28",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
    "zarr>=2.18.3",
    "zipp>=3.23.0",
]
